# GENERATIONS

./: .agent-proposal-pending  .clang-format  .dockerignore  .gitattributes  .gitignore  CLEANUP_PROPOSAL_DEV_LINUX.md  CMakeLists.txt  CMakePresets.json  DOCKER.md  DOCKER_ARCHITECTURE.md  Dockerfile  Dockerfile.arm64  Dockerfile.dev  GENERATIONS.sln  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  ITTERATIONS_DEV_SETUP.md  LICENSE  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  RASPBERRY_PI.md  README.md  RENDER_PICKING_README.md  TEST_SCREENSHOT_INTEGRATION.md  docker-compose.yml  gpu_trace_live.sh  linux.md  run-docker.sh  run.sh  schedule.md  screenshot_demo.txt  test-docker.sh  todo.md
.github/agents/: QUICK_REFERENCE.md  README.md  agentic-workflows.agent.md  asset-agent.json  base.md  build-agent.json  code-quality-agent.json  cpp-lead.md  crontab  current-task.md  documentation-agent.json  hpc-marketeer.md  kernel-expert.md  macros.md  manage-schedule.sh  party.md  procedures.md  refactorer.md  test-agent.json  vulkan-guru.md
.github/scripts/: agent_autorun.py  agent_orchestrator.py
.github/workflows/: agent-autonomous-run.yml  ci.yml  copilot-setup-steps.yml  daily-repo-status.lock.yml  daily-repo-status.md  trigger-agents.yml
Touchdesigner/: CAPITAL.authority.107.toe  CAPITAL.basis.177.toe  CAPITAL.block.44.toe  CAPITAL.communities.119.toe  CAPITAL.focus.131.toe  CAPITAL.loop.36.toe  CAPITAL.market.139.toe  CAPITAL.roads.109.toe  CAPITAL.route.149.toe  CAPITAL.routes.118.toe  CAPITAL.structure.110.toe  CAPITAL.structured.66.toe  CAPITAL.waters.96.toe  CAPITAL_engine_matrix.3.toe
assets/3D/: Cube.mtl  Rectangle.mtl  Sphere.mtl  SphereHR.mtl  Torus.mtl
assets/economic/: sources.md
assets/tools/: analyze_colors.py  analyze_water.py  check_folder_dependencies.py  daily_report.sh  generate_shader_interface.py  gpu_trace_live.sh  run_daily_report.sh  stress_test.sh
docs/: ARCHITECTURE.md  ARCHITECTURE_SAFETY_PROFILE.md  BUILD_SYSTEM_MIGRATION.md  CLASS_MAP.md  DEEPTEST.md  DEPENDENCY_STRATEGY.md  EXAMPLES.md  EXECUTIVE_SUMMARY.md  GPU_GRID_GENERATION.md  IMPLEMENTATION_EXAMPLES.md  LONG_TERM_VIABILITY.md  MAINTENANCE_SCHEDULE.md  PICKING_ARCHITECTURE.md  REFACTORING_SUMMARY.md  RENDER_PICKING_IMPLEMENTATIONS.md  STEAM_INTEGRATION.md  Screenshot.md  VISUAL_SUMMARY.md  VULKAN_REQUIREMENTS.md
economic/: README.md  definitions.md  principles.md
libraries/: VERSIONS.md
logs/: daily_report_20260217.md
scripts/: all_shaders_graph.py
shaders/: Cells.frag  Cells.vert  CellsFollower.vert  CellsPicking.frag  CellsPicking.vert  ComputeCopy.comp  ComputeInPlace.comp  ComputeJitter.comp  Cube.vert  Engine.comp  Graphics1.vert  Graphics2.vert  GridGeneration.comp  Landscape.frag  Landscape.tesc  Landscape.tese  Landscape.vert  LandscapeDebug.frag  LandscapeNormals.frag  LandscapeShared.glsl  LandscapeStage1.frag  LandscapeStage2.frag  LandscapeStatic.vert  LandscapeWireFrame.frag  LandscapeWireFrame.tesc  LandscapeWireFrame.tese  LandscapeWireFrame.vert  ParameterUBO.glsl  PostFX.comp  PushConstants.glsl  SeedCells.comp  Sky.frag  Sky.vert  TerrainBox.frag  TerrainBox.vert  TerrainBoxSeam.vert  TerrainField.glsl  Texture.frag  Texture.vert  Tiles.frag  (+10 more)
src/: BaseClasses.cpp  BaseClasses.h  BaseClasses.h.backup  Buffer.cpp  Buffer.h  CAPITAL-engine.vcxproj  CAPITAL-engine.vcxproj.filters  CE.cpp  CE.h  CEbuffer.cpp  CEbuffer.h  CEimage.cpp  CEimage.h  Camera.cpp  Camera.h  Canvas.h  CapitalEngine.cpp  CapitalEngine.h  Control.cpp  Control.h  Debug.cpp  FOLDER_DEPENDENCY_MAP.md  Geometry.cpp  Geometry.h  Image.cpp  Image.h  Interface.h  Library.cpp  Library.h  Log.cpp  Log.h  Mechanics.cpp  Mechanics.h  Memory.cpp  Memory.h  Pipelines.cpp  Pipelines.h  RenderInterface.h  Resources.cpp  Resources.h  (+27 more)
src/app/: CapitalEngine.cpp  CapitalEngine.h  ImGuiUI.cpp  ImGuiUI.h  main.cpp
src/asset_io/: Library.cpp  Library.h
src/base/: ShaderInterface.h  ValidationLayers.cpp  VulkanCore.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelinePresets.h  VulkanResources.cpp  VulkanResources.h  VulkanSync.cpp  VulkanSync.h  VulkanUtils.h
src/control/: Timer.cpp  Timer.h  Window.cpp  Window.h  gui.cpp  gui.h
src/core/: GpuProfiler.cpp  GpuProfiler.h  Log.cpp  Log.h  MemoryTracker.cpp  MemoryTracker.h  RuntimeConfig.cpp  RuntimeConfig.h  ShaderInterface.h  Timer.cpp  Timer.h
src/engine/: CapitalEngine.cpp  CapitalEngine.h  Log.cpp  Log.h
src/gui/: gui.h
src/implementation/: GraphExecutionPlan.cpp  GraphExecutionPlan.h  ImplementationSpec.cpp  ImplementationSpec.h  PythonGraphScript.cpp  PythonGraphScript.h  ScriptChainerApp.cpp  ScriptChainerApp.h  ShaderGraph.cpp  ShaderGraph.h
src/io/: Library.cpp  Library.h  Screenshot.cpp  Screenshot.h
src/pipelines/: FrameContext.cpp  ShaderAccess.cpp  ShaderAccess.h
src/platform/: SteamIntegration.cpp  SteamIntegration.h  ValidationLayers.cpp  ValidationLayers.h  Window.cpp  Window.h
src/render/: FrameContext.cpp  FrameContext.h  Mechanics.cpp  Mechanics.h  Pipelines.cpp  Pipelines.h  Resources.cpp  Resources.h  ShaderAccess.cpp  ShaderAccess.h  gui.cpp  gui.h
src/resources/: ParameterUBO.schema  Resources.cpp  Resources.h  ShaderInterface.h
src/scene/: SceneConfig.cpp  SceneConfig.h
src/shaders/: shader.comp  shader.frag
src/vulkan_base/: VulkanBaseDescriptor.cpp  VulkanBaseDescriptor.h  VulkanBaseDevice.cpp  VulkanBaseDevice.h  VulkanBasePipeline.cpp  VulkanBasePipeline.h  VulkanBasePipelinePresets.h  VulkanBaseResources.cpp  VulkanBaseResources.h  VulkanBaseSync.cpp  VulkanBaseSync.h  VulkanBaseUtils.h  VulkanBaseValidationLayers.cpp  VulkanBaseValidationLayers.h  (+11 more)
test/: picking_demo  picking_demo.cpp
todo/: README.md  interface-realignment-plan.md
tools/: analyze_screenshots.py  check_folder_dependencies.py  check_library_versions.py  daily_report.sh  deeptest_memory.sh  generate_shader_interface.py  gpu_trace_live.sh  result.txt  run_daily_report.sh  src_to_one_file.py  stress_test.sh
(+62 files in other folders)
